Stabilize platform APIs and repair core frontend workflows